# manta-telegram

./: .gitignore  Pipfile  README.md  build.sh  pyproject.toml
docker/: Dockerfile
manta_telegram/: bot.py  private.py  settings.py
mantatelegram/: bot.py  private.py  qr_logo.py  settings.py
