[tool.poetry]
name = "manta-telegram"
version = "0.2.1"
description = "Manta Telegram Bot"
authors = ["Alessandro Viganò <alessandro@appia.co>"]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.2.0"
aiogram = "^2.4"
qrcode = {extras = ["pil"], version = "^6.1"}
manta = {git = "https://github.com/appiapay/manta-python.git"}
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mtbot= 'manta_telegram:bot.run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
